--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         <!-- Movie listings will be displayed here -->
     </section>
 
-    <script src="index.js"></script>
+    <script src="Movie/index.js"></script>
 </body>
 </html>
