--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         <!-- Movie listings will be displayed here -->
     </section>
 
-    <script src="index.js"></script>
+    <script src="https://github.com/sahid204/Movie/blob/main/index.js"></script>
 </body>
 </html>
