--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Search</title>
-    <link rel="stylesheet" href="https://github.com/sahid204/Movie/blob/main/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <main>
@@ -28,6 +28,6 @@
         <!-- Movie listings will be displayed here -->
     </section>
 
-    <script src="https://github.com/sahid204/Movie/blob/main/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
